plugins/formal-verification/testData/diagnostics/bad_contracts/viper_verify.kt
import org.jetbrains.kotlin.formver.plugin.verify
import org.jetbrains.kotlin.formver.plugin.AlwaysVerify

@AlwaysVerify
fun <!VIPER_TEXT!>verify_false<!>() {
    verify(<!VIPER_VERIFICATION_ERROR!>false<!>)
}

@AlwaysVerify
fun <!VIPER_TEXT!>verify_compound<!>() {
    verify(<!VIPER_VERIFICATION_ERROR!>true && false<!>)
}
